# cryptocurrency_tax_calculator

./: .gitignore  CONTEXT.md  README.md  docker-compose.yml
api/: .dockerignore  Dockerfile  alembic.ini  pyproject.toml
api/alembic/: env.py
api/alembic/versions/: 0001_initial.py
api/src/taxcalc/: __init__.py
api/src/taxcalc/db/: base.py  models.py  session.py
api/src/taxcalc/engine/: __init__.py  matching.py
api/src/taxcalc/ingest/: __init__.py  kraken.py
api/src/taxcalc/providers/: __init__.py  price_port.py
api/src/taxcalc/valuation/: __init__.py  valuation.py
api/src/taxcalc/web/: config.py  main.py
api/src/taxcalc/web/routes/: chat.py
api/tests/: fixtures_loader.py  test_fixtures.py  test_harness.py  test_ingest_valuation.py  test_matching.py  test_matching_properties.py
api/tests/fixtures/: crypto22251-victoria-token-a.yaml
docs/: 0-master-12-week-build.md
reference/: crypto-to-gbp-tax.py
web/: .dockerignore  Dockerfile  package.json  pnpm-lock.yaml
web/app/api/chat/: route.ts
web/app/chat/: page.tsx
webhooks/: Dockerfile  app.py  pyproject.toml
