[project]
name = "taxcalc"
version = "0.1.0"
description = "UK crypto CGT calculation and reporting aid — deterministic engine + API"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "anthropic>=0.69",
    "sqlalchemy[asyncio]>=2",
    "asyncpg>=0.29",
    "alembic>=1.13",
    "pydantic-settings>=2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
package = true

[dependency-groups]
dev = [
    "pytest>=8",
    "ruff>=0.6",
    "mypy>=1.11",
    "hypothesis>=6.160.0",
    "pydantic>=2",
    "pyyaml>=6",
    "types-pyyaml>=6",
]

[tool.hatch.build.targets.wheel]
packages = ["src/taxcalc"]

[tool.ruff]
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src", "tests"]

# Global strict for now — the codebase is just the engine. When web/tasks/ingest
# arrive (step 4) they get per-module overrides that relax specific checks;
# engine/ and pricing/ stay strict permanently.
[tool.mypy]
python_version = "3.13"
strict = true

# engine/ (and future pricing/) stay fully strict. The full-stack modules relax
# only `disallow_untyped_decorators` — FastAPI's route decorators are untyped and
# trip strict mode; everything else stays strict.
[[tool.mypy.overrides]]
module = ["taxcalc.web.*", "taxcalc.db.*"]
disallow_untyped_decorators = false
